  - Removed deprecated local_address method from Mojo::UserAgent.
  - Removed deprecated tls_ciphers, tls_protocols, tls_verify and tls_version options from Mojo::IOLoop::TLS.
  - Removed deprecated local_address option from Mojo::IOLoop::Client.
  - Removed deprecated config stash value.
  - Changed Mojo::Log to join mutiple log messages with a whitespace instead of a newline.
  - Added is_reserved method to Mojolicious.
  - Improved Mojolicious::Routes to disallow the use of reserved stash values, such as "/:action", in route patterns.
  - Improved Mojolicious::Routes to throw exceptions for missing controllers.
  - Improved Mojolicious::Routes to throw exceptions for routes with controllers but without action.
  - Improved Mojolicious::Routes to disallow namespace without controller for routing.
  - Improved contextual logging feature in Mojo::Log not to concatenate log messages and context.
  - Improved all_text method in Mojo::DOM to exclude "<script>" and "<style>" from text extraction in HTML documents.
  - Improved error messages in config plugins to be more consistent.

8.74  2021-02-06

8.73  2021-02-05
  - Removed finally keyword from check function in Mojo::Exception.
  - Changed arguments of check function in Mojo::Exception to be easier to use with Perl 5.34 try/catch.
  - Removed experimental status from preload_namespaces attribute in Mojolicious.
  - Removed experimental status from any, map, timer and timeout methods in Mojo::Promise.
  - Removed experimental status from extname method in Mojo::File.
  - Removed experimental status from warmup method in Mojolicious.
  - Removed experimental status from load_classes function in Mojo::Loader.
  - Removed experimental status from Mojo::DynamicMethods. Still summons old gods, use at your own risk!
  - Removed experimental status from before_command hook in Mojolicious.
  - Added silent attribute to Mojo::Server::Morbo.

8.72  2021-01-26