@@ -12,11 +12,12 @@
   - Removed deprecated local_address option from Mojo::IOLoop::Client.
   - Removed deprecated config stash value.
   - Changed Mojo::Log to join mutiple log messages with a whitespace instead of a newline.
-  - Added is_reserved method to Mojolicious.
+  - Added is_reserved method to Mojolicious::Routes::Route.
   - Improved Mojolicious::Routes to disallow the use of reserved stash values, such as "/:action", in route patterns.
   - Improved Mojolicious::Routes to throw exceptions for missing controllers.
   - Improved Mojolicious::Routes to throw exceptions for routes with controllers but without action.
   - Improved Mojolicious::Routes to disallow namespace without controller for routing.
+  - Improved render method in Mojolicious::Controller to die if no response could be rendered.
   - Improved contextual logging feature in Mojo::Log not to concatenate log messages and context.
   - Improved all_text method in Mojo::DOM to exclude "<script>" and "<style>" from text extraction in HTML documents.
   - Improved error messages in config plugins to be more consistent.
